# data-lake-env-py-component

./: .coveragerc  .gitignore  .pytest_covrc  Dockerfile  README.md  horusec-config.json  mypy.ini  requirements.txt  setup.cfg  tox.ini
plugin/domain/: exceptions.py  manifest.py
plugin/entrypoint/cli/: __init__.py  create.py  main.py
plugin/infrastructure/resource/: interface.py
plugin/infrastructure/resource/aws/cdk/: main.py
plugin/infrastructure/resource/aws/cdk/engine/: main.py
plugin/infrastructure/resource/aws/cdk/stacks/: __init__.py  data_repository.py  taxonomy.py
plugin/infrastructure/resource/aws/services/: main.py
plugin/infrastructure/resource/aws/services/lakeformation/: __init__.py  interface.py  service.py
plugin/infrastructure/resource/aws/services/s3/: __init__.py  interface.py  service.py
plugin/usecase/datalake/: interface.py  main.py
plugin/utils/: file.py
template/: manifest.yaml
tests/plugin/infrastructure/cdk/: test_aws_cdk.py  test_cdk_engine.py  test_create_data_repository.py  test_create_taxonomy.py
tests/plugin/infrastructure/services/: test_lakeformation.py  test_s3.py  test_sdk.py
tests/plugin/usecase/: test_create_data_lake.py
